--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.labawsrh.aws.rvitemanimaion">
 
     <application
+        android:name=".ApplicationClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,16 +11,31 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ChatsActivity">
+        <activity android:name=".StartChatting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+
+        <activity
+            android:name=".ChatsActivity"
+            android:screenOrientation="portrait">
 
         </activity>
+
+        <activity android:name=".MainActivity">
+
+
+        </activity>
+
+        <activity android:name=".GroupChat"/>
+
+        <activity android:name=".Users">
+
+        </activity>
+
     </application>
 
 </manifest>
